--- a/designer/primera_gui.ui
+++ b/designer/primera_gui.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>772</width>
-    <height>279</height>
+    <height>415</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -40,11 +40,11 @@
      </rect>
     </property>
    </widget>
-   <widget class="QDoubleSpinBox" name="doubleSpinBox">
+   <widget class="QDoubleSpinBox" name="selectV1Offset">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>140</y>
+      <x>160</x>
+      <y>170</y>
       <width>70</width>
       <height>30</height>
      </rect>
@@ -53,8 +53,8 @@
    <widget class="QPushButton" name="confirmButton">
     <property name="geometry">
      <rect>
-      <x>520</x>
-      <y>110</y>
+      <x>300</x>
+      <y>280</y>
       <width>161</width>
       <height>81</height>
      </rect>
@@ -79,20 +79,20 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>150</y>
-      <width>71</width>
+      <x>100</x>
+      <y>180</y>
+      <width>51</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Select offset</string>
+     <string>V1 Offset</string>
     </property>
    </widget>
    <widget class="QSpinBox" name="selectV1Port">
     <property name="geometry">
      <rect>
-      <x>340</x>
+      <x>150</x>
       <y>120</y>
       <width>45</width>
       <height>30</height>
@@ -102,8 +102,8 @@
    <widget class="QSpinBox" name="selectV2Port">
     <property name="geometry">
      <rect>
-      <x>340</x>
-      <y>160</y>
+      <x>300</x>
+      <y>120</y>
       <width>45</width>
       <height>30</height>
      </rect>
@@ -112,7 +112,7 @@
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>290</x>
+      <x>100</x>
       <y>130</y>
       <width>41</width>
       <height>16</height>
@@ -125,8 +125,8 @@
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>170</y>
+      <x>250</x>
+      <y>130</y>
       <width>41</width>
       <height>16</height>
      </rect>
@@ -138,7 +138,7 @@
    <widget class="QSpinBox" name="selectV3Port">
     <property name="geometry">
      <rect>
-      <x>460</x>
+      <x>450</x>
       <y>120</y>
       <width>45</width>
       <height>30</height>
@@ -148,8 +148,8 @@
    <widget class="QSpinBox" name="selectV4Port">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>160</y>
+      <x>600</x>
+      <y>120</y>
       <width>45</width>
       <height>30</height>
      </rect>
@@ -158,7 +158,7 @@
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>400</x>
       <y>130</y>
       <width>41</width>
       <height>16</height>
@@ -171,14 +171,175 @@
    <widget class="QLabel" name="label_6">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>170</y>
+      <x>550</x>
+      <y>130</y>
       <width>41</width>
       <height>16</height>
      </rect>
     </property>
     <property name="text">
      <string>V4 Port</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_7">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>180</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V2 Offset</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV2Offset">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>170</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>180</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V3 Offset</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV3Offset">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>170</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_9">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>180</y>
+      <width>51</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V4 Offset</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV4Offset">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>170</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_10">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>230</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V2 Multiplier</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_11">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>230</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V4 Multiplier</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV2Multiplier">
+    <property name="geometry">
+     <rect>
+      <x>310</x>
+      <y>220</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV4Multiplier">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>220</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV3Multiplier">
+    <property name="geometry">
+     <rect>
+      <x>460</x>
+      <y>220</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_12">
+    <property name="geometry">
+     <rect>
+      <x>100</x>
+      <y>230</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V1 Multiplier</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_13">
+    <property name="geometry">
+     <rect>
+      <x>400</x>
+      <y>230</y>
+      <width>61</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>V3 Multiplier</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="selectV1Multiplier">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>220</y>
+      <width>70</width>
+      <height>30</height>
+     </rect>
     </property>
    </widget>
   </widget>
